Bug 412836 - Checkboxes under "Searchable column" act like radiobuttons
Summary: Checkboxes under "Searchable column" act like radiobuttons
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 19.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-11 05:13 UTC by Alexander Potashev
Modified: 2019-12-29 08:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-10-11 05:13:01 UTC
SUMMARY
Checkboxes under "Searchable column" act like radiobuttons.

Only one option can be selected in the Translation Units' "options" menu under "Searchable column", thus the menu items should look like radiobuttons. However at the moment they look like checkboxes.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.62.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
lokalize 19.08.1
Comment 1 Simon Depiets 2019-12-29 08:10:39 UTC
Git commit d708e9a96054b6968b96f86cb79ef1b4ede063be by Simon Depiets.
Committed on 28/12/2019 at 06:59.
Pushed by sdepiets into branch 'master'.

Put radio buttons for Catalog Filter

M  +2    -1    src/cataloglistview/cataloglistview.cpp

https://commits.kde.org/lokalize/d708e9a96054b6968b96f86cb79ef1b4ede063be