Put radio buttons for Catalog Filter

BUG:412836